# cs1103-classroom-2025-1-teo1-projecto-final-prog3_final_project_2025_1

./: CMakeLists.txt  README.md
dataset/results/: experiment_results_1.csv
dataset/training/: mnist8_test.csv  mnist8_train.csv
src/utec/app/: app_manager.cpp
tests/layer_test/: main_test_dense_layer.cpp  test_dense_layer.h
